--- a/estilo-segundoex1.css
+++ b/estilo-segundoex1.css
@@ -9,7 +9,7 @@
 .div2 {
     background-color: black;
     width: 50%;
-    height: 50%;
+    height: 50vh;
     border: 10px dashed red;
     margin-left: 100px;
     margin-top: 100px;   
